--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -34,12 +34,12 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginBottom="4dp"
-            android:background="@color/lightgreen"
+            android:background="@drawable/et_rounded"
             android:ems="10"
             android:fontFamily="@font/amiko"
             android:hint="@string/nombre"
             android:inputType="textPersonName"
-            android:textSize="24sp"
+            android:textSize="22sp"
             tools:ignore="Autofill" />
 
         <EditText
@@ -50,7 +50,7 @@
             android:layout_marginTop="4dp"
             android:layout_marginRight="8dp"
             android:layout_marginBottom="4dp"
-            android:background="@color/lightgreen"
+            android:background="@drawable/et_rounded"
             android:ems="10"
             android:fontFamily="@font/amiko"
             android:hint="@string/email"
@@ -66,7 +66,7 @@
             android:layout_marginTop="4dp"
             android:layout_marginRight="8dp"
             android:layout_marginBottom="4dp"
-            android:background="@color/lightgreen"
+            android:background="@drawable/et_rounded"
             android:ems="10"
             android:fontFamily="@font/amiko"
             android:hint="@string/telefono"
@@ -82,7 +82,7 @@
             android:layout_marginTop="4dp"
             android:layout_marginRight="8dp"
             android:layout_marginBottom="4dp"
-            android:background="@color/lightgreen"
+            android:background="@drawable/et_rounded"
             android:ems="10"
             android:fontFamily="@font/amiko"
             android:hint="@string/clave"
@@ -98,7 +98,7 @@
             android:layout_marginTop="4dp"
             android:layout_marginRight="8dp"
             android:layout_marginBottom="4dp"
-            android:background="@color/lightgreen"
+            android:background="@drawable/et_rounded"
             android:ems="10"
             android:fontFamily="@font/amiko"
             android:hint="@string/claveAgain"
@@ -134,7 +134,7 @@
                 android:layout_marginEnd="4dp"
                 android:layout_marginBottom="12dp"
                 android:layout_weight="1"
-                android:background="@color/lightgreen"
+                android:background="@drawable/et_rounded"
                 android:fontFamily="@font/amiko"
                 android:gravity="center_horizontal|center_vertical"
                 android:text="@string/fecha_nacimiento"
@@ -175,7 +175,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginBottom="4dp"
-            android:background="@color/lightgreen"
+            android:background="@drawable/et_rounded"
             android:entries="@array/lista_ciudades" />
 
         <TextView
